--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "api.ai": "^1.0.3",
     "apiai": "^4.0.3",
+    "dialogflow": "^0.1.0",
+    "dotenv": "^5.0.1",
     "express": "^4.16.2",
     "google-auth-library": "^0.12.0",
     "googleapis": "^25.0.0",
@@ -13,7 +15,6 @@
   },
   "devDependencies": {},
   "scripts": {
-    // "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
