--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "express": "^4.16.2",
     "google-auth-library": "^0.12.0",
     "googleapis": "^25.0.0",
-    "telegram-node-bot": "^4.0.5"
+    "telegram-node-bot": "^4.0.5",
+    "console-stamp": "^0.2.6 ",
+    "uuid":"^3.2.1"
   },
   "devDependencies": {},
   "scripts": {
