--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "dependencies": {
     "api.ai": "^1.0.3",
     "apiai": "^4.0.3",
+    "console-stamp": "^0.2.6 ",
     "dialogflow": "^0.1.0",
     "dotenv": "^5.0.1",
     "express": "^4.16.2",
     "google-auth-library": "^0.12.0",
     "googleapis": "^25.0.0",
+    "mongoose": "^5.0.11",
     "telegram-node-bot": "^4.0.5",
-    "console-stamp": "^0.2.6 ",
-    "uuid":"^3.2.1"
+    "uuid": "^3.2.1"
   },
   "devDependencies": {},
   "scripts": {
