--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^5.0.11",
     "telegram-node-bot": "^4.0.5",
     "uuid": "^3.2.1"
+    "sheetsu-node"
   },
   "devDependencies": {},
   "scripts": {
