--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "google-auth-library": "^0.12.0",
     "googleapis": "^25.0.0",
     "mongoose": "^5.0.11",
+    "sheetsu-node": "0.0.7",
     "telegram-node-bot": "^4.0.5",
     "uuid": "^3.2.1"
-    "sheetsu-node"
   },
   "devDependencies": {},
   "scripts": {
