--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "google-auth-library": "^0.12.0",
     "googleapis": "^27.0.0",
     "mongoose": "^5.0.11",
+    "opn": "^5.3.0",
     "sheetsu-node": "0.0.7",
     "telegram-node-bot": "^4.0.5",
     "uuid": "^3.2.1"
